[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.265",
    "black>=22.12.0",
    "commitizen>=2.39.1",
    "pre-commit>=2.21.0",
    "pytest>=7.2.0",
    "allure-pytest>=2.12.0",
]

[tool.pylint."messages control"]
disable = ["missing-module-docstring"]
[tool.pylint.'MASTER']
ignore-patterns = ["^test.+"]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "semver"
version = "0.1.0"
update_changelog_on_bump = true
major_version_zero = true
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "caichengxiao", email = "a23657055@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
